@@ -2,12 +2,12 @@
 .\"     Title: aria2c
 .\"    Author: [FIXME: author] [see http://docbook.sf.net/el/author]
 .\" Generator: DocBook XSL Stylesheets v1.75.2 <http://docbook.sf.net/>
-.\"      Date: 07/14/2010
+.\"      Date: 07/15/2010
 .\"    Manual: Aria2 Manual
 .\"    Source: Aria2 1.9.5
 .\"  Language: English
 .\"
-.TH "ARIA2C" "1" "07/14/2010" "Aria2 1\&.9\&.5" "Aria2 Manual"
+.TH "ARIA2C" "1" "07/15/2010" "Aria2 1\&.9\&.5" "Aria2 Manual"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
@@ -1211,6 +1211,16 @@ is
 \fB\-\-always\-resume\fR
 option\&. Default:
 \fI0\fR
+.RE
+.PP
+\fB\-\-min\-split\-size\fR=SIZE
+.RS 4
+aria2 does not split less than 2*SIZE byte range\&. For example, let\(cqs consider downloading 20MiB file\&. If SIZE is 10M, aria2 can split file into 2 range [0\-10MiB) and [10MiB\-20MiB) and download it using 2 sources(if
+\fB\-\-split\fR
+>= 2, of course)\&. If SIZE is 15M, since 2*15M > 20MiB, aria2 does not split file and download it using 1 source\&. Possible Values:
+\fI1M\fR\-\fI1024M\fR
+Default:
+\fI20M\fR
 .RE
 .PP
 \fB\-\-log\-level\fR=LEVEL
