@@ -1,5 +1,10 @@
 2010-07-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
 
+	Documented --min-split-size option in man page.
+	* doc/aria2c.1.txt
+
+2010-07-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
+
 	Added --min-split-size=SIZE option.  aria2 does not split less
 	than 2*SIZE byte range.  For example, let's consider downloading
 	20MiB file. If SIZE is 10M, aria2 can split file into 2 range
